<resources>
    <string name="app_name">LoginAppIntercorp</string>
    <string name="facebook_app_id">497580801834519</string>
    <string name="fb_login_protocol_scheme">fb497580801834519</string>
    <string name="facebook_client_token">b4068390253616cee75637c8811b1e5f</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="age">Edad</string>
    <string name="date_birth">Fecha de nacimiento</string>
    <string name="text_phone">Continuar con celular</string>
    <string name="creation_client">Creación de Cliente</string>
    <string name="button_register">Registrar</string>
    <string name="helper_text">Obligatorio</string>
    <string name="invalid_text">Ingrese un valor correcto</string>
    <string name="correct_text">Correcto</string>
    <string name="client_created">Cliente creado</string>
    <string name="login_successful">Logeo exitoso</string>
    <string name="login_error">No se pudo validar el logeo</string>
    <string name="login_cancel">Ups, Hubo un error</string>
    <string name="firebase_error">Hubo un error al autenticarse</string>
    <string name="email_permission_facebook">email</string>
    <string name="public_permission_facebook">public_profile</string>
    <string name="phone_number">Ingresa tu número de teléfono móvil</string>
    <string name="phone_number_principal">Número de teléfono móvil</string>
    <string name="country">País</string>
    <string name="label_info">Le enviaremos un código a este número de teléfono móvil para poder ingresar.</string>
    <string name="label_info_otp">Ingresa el código que se te envió al</string>
    <string name="label_otp">Ingresa tu código</string>
    <string name="resend_otp">Reenviar código</string>
    <string name="verify_otp">Verificar código</string>
    <string name="separator">o</string>
    <string name="message_wait">Espere por favor</string>
    <string name="message_code_success">Se envió el código correctamente</string>
    <string name="message_alert_phone">Ingresa un Número de celular correcto</string>
    <string name="message_alert_otp">Ingresa un código correcto</string>
    <string name="message_verify_otp">Verificando código</string>
    <string name="message_resend_otp">Reenviando código</string>
    <string name="message_phone_successful">Login Correcto</string>
    <string name="message_send">Enviando código</string>
    <string name="label_welcome">Bienvenido: </string>
    <string name="label_exit">Salir</string>
    <string name="label_date">Fecha</string>
    <string name="login_cancel_much">Ups, Hubo un error, inténtelo de nuevo en unos minutos.</string>
</resources>