<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutTop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/lblTv"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblWelcome"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_welcome"
            android:textStyle="bold"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/lblUser"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="1"
            android:textSize="15sp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logoutBtn"
            android:text="@string/label_exit"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>
    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/creation_client"
        app:layout_constraintTop_toBottomOf="@+id/layoutTop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nameTv"
        android:paddingTop="10dp"
        android:textSize="25sp"
        android:id="@+id/lblTv"
        android:textStyle="bold"
        style="@style/TextAppearance.MaterialComponents.Headline1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lblTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/name"
        app:boxStrokeColor="@color/principal"
        app:helperText="@string/helper_text"
        app:helperTextTextColor="@color/principal"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_create_24"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastnameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/lastname"
        app:boxStrokeColor="@color/principal"
        app:helperText="@string/helper_text"
        app:helperTextTextColor="@color/principal"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastnameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_create_24"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ageTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lastnameTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/age"
        app:boxStrokeColor="@color/principal"
        app:helperText="@string/helper_text"
        app:helperTextTextColor="@color/principal"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ageEt"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_create_24"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/layoutDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ageTv">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateBirthTv"
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ageTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/date_birth"
            app:boxStrokeColor="@color/principal"
            app:helperText="@string/helper_text"
            app:helperTextTextColor="@color/principal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateBirthEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:duplicateParentState="false"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/imagePicker"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_date_range_24"
            android:contentDescription="@string/label_date" />

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layoutDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/registerBtn"
        android:text="@string/button_register"
        android:textColor="@color/white"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="15dp"
        style="@style/TextAppearance.MaterialComponents.Headline6"/>



</androidx.constraintlayout.widget.ConstraintLayout>